5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1630_2945.log
== TEST (2019-04-02 16:12:10) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer faze?"))
print(d)
print(t)
print(p)
print(round())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:26) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer faze?"))
print(d)
print(t)
print(p)
print(round().,d,t,p)
-- ERROR:
File "XXXX", line 7
    print(round().,d,t,p)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:30) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer faze?"))
print(d)
print(t)
print(p)
print(round().,d,t,p)
-- ERROR:
File "XXXX", line 7
    print(round().,d,t,p)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:15) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer faze?"))
print(d)
print(t)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:32) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer faze?"))
print(d)
print(t)
print(p)
round(d,t,p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:07) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer faze?"))
print(d)
print(t)
print(p)
math
print(d,t,p,round())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:26) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer faze?"))
print(d)
print(t)
print(p)

print(d,t,p,round())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:43) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer faze?"))
print(d)
print(t)
print(p)

print(d,t,p,round)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:18:56) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer faze?"))
print(d)
print(t)
print(p)

print(d,t,p,round)

-- EXECUTION TIME:
0.133252
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:05) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer faze?"))
print(d)
print(t)
print(p)

print(d,t,p,round)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:12) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer faze?"))
print(d)
print(t)
print(p)

print(d,t,p,round)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:20:53) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(d,t,p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:07) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
match=465.33
print(round(d,t,p))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:26:14) 
-- CODE:
from math imput
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(d,t,p))

-- ERROR:
File "XXXX", line 1
    from math imput
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:46) 
-- CODE:
from math input
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(683,33)d,t,p)

-- ERROR:
File "XXXX", line 1
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:55) 
-- CODE:
from math input
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)


-- ERROR:
File "XXXX", line 1
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:28:20) 
-- CODE:
from math input
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)


-- ERROR:
File "XXXX", line 1
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:28:25) 
-- CODE:
from math input
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)


-- ERROR:
File "XXXX", line 1
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:28:35) 
-- CODE:
from math input
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)


-- ERROR:
File "XXXX", line 1
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:26) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
from math input
print(d,t,p,(round))

-- ERROR:
File "XXXX", line 7
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:32) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
from math input
print(d,t,p,(round()))

-- ERROR:
File "XXXX", line 7
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:41) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
from math input
print(d,t,p,round())

-- ERROR:
File "XXXX", line 7
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:47) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
from math input
print(d,t,p,round())

-- ERROR:
File "XXXX", line 7
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:47) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
from math input
print(d,t,p,round())

-- ERROR:
File "XXXX", line 7
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:53) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
from math input
print(d,t,p,round)

-- ERROR:
File "XXXX", line 7
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:44) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
from math input
print(d,t,p*,round())

-- ERROR:
File "XXXX", line 7
    from math input
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:40:52) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(d,t+p))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:41:03) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(d,t+p))

-- EXECUTION TIME:
0.223133
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:07) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(d,t+p))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:24) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(d,t+p))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:38) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(d+t+p,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:43:47) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(d+t+p,2))

-- EXECUTION TIME:
0.192866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:44:29) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(46533,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:44:39) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(46533,2))

-- EXECUTION TIME:
0.173805
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:44:52) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(465,33,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:04) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(465,33,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:23) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(,2))

-- ERROR:
File "XXXX", line 7
    print(round(,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:54) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(4+5+6,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:46:08) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(4+5+6,2))

-- EXECUTION TIME:
0.145577
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:36) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(d,t,p,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:46:44) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(d,t,p,2))

-- EXECUTION TIME:
0.15333
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:58) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(d,t+p,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:55) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(,2))

-- ERROR:
File "XXXX", line 7
    print(round(,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:08) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round())


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:38) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(5+6+7,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:50:23) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(,2))


-- ERROR:
File "XXXX", line 7
    print(round(,2))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:50:32) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round())


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:51:10) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(123,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:51:36) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(123.457,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:52:05) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(123.457,2))


-- EXECUTION TIME:
0.265478
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:11) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(123.457,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:32) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(round(123.457,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:52:40) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(round(123.457,2))


-- EXECUTION TIME:
0.140931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:52) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(round(123.457,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:53:35) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(123.457,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:53:49) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(123.457,2))


-- EXECUTION TIME:
0.184506
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:53:56) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(123.457,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:54:20) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(345.43,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:54:29) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(345.43,2))


-- EXECUTION TIME:
0.189682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2945/main.py", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:54:32) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(345.43,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:54:49) 
-- CODE:
d=int(input("qual o diametro da figideira?"))
t=int(input("qual a espessura da panqueca?"))
p=int(input("qual a quantidade de panqueca que se quer fazer?"))
print(d)
print(t)
print(p)
print(round(123.457,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    d=int(input())
ValueError: invalid literal for int() with base 10: '50.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
